[package]
name = "raincloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.151", features = ["serde_derive"] }
subprocess = "0.2.9"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.10"
warp = "0.3.3"
